--- a/src/tvision.css
+++ b/src/tvision.css
@@ -51,7 +51,7 @@ body { margin:0; }
 }
 
 button {
-  margin:0;padding:0;border:none;
+  margin:0;padding:0;border:none;cursor:pointer;
 }
 
 button,
